--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -21,13 +21,7 @@
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         </div>
 
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-info" role="alert">{{ message }}</div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+        {% include '_messages.html' %}
 
         <div class="form-label-group">
             {% if form.username.errors %}
