--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,13 +62,7 @@
 
         {% block content -%}
             <div class="container-fluid">
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                    <div class="alert alert-info" role="alert">{{ message }}</div>
-                    {% endfor %}
-                {% endif %}
-                {% endwith %}
+                {% include '_messages.html' %}
         
                 {# application content needs to be provided in the app_content block #}
                 {% block app_content %}{% endblock %}
