--- a/app/templates/_messages.html
+++ b/app/templates/_messages.html
@@ -1,7 +1,7 @@
-{% with messages = get_flashed_messages() %}
+{% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% for category, message in messages %}
+            <div class="alert alert-{% if category != 'message' -%} {{ category }} {%- else -%} info {%- endif %}" role="alert">{{ message }}</div>
         {% endfor %}
     {% endif %}
 {% endwith %}
