--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <div class="row">
 
             <!-- Sidebar -->
@@ -84,7 +84,7 @@
             </nav>
 
             <!-- Dashboard Content -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-2">
                 {% include '_messages.html' %}
 
                 {% block dashboard_content %} {% endblock %}
