--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -2,5 +2,58 @@
 {% set active_page = 'dashboard.budget' -%}
 
 {% block dashboard_content %}
-    <h1>Budget Page</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Category</th>
+                <th scope="col">Budgeted</th>
+                <th scope="col">Activity</th>
+                <th scope="col">Available</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="thead-light">
+                <th scope="rowgroup">Savings</th>
+                <th>$0.00</td>
+                <th>$0.00</td>
+                <th>$0.00</td>
+            </tr>
+            <tr>
+                <th scope="row">Emergency Fund</th>
+                <td>$0.00</td>
+                <td>$0.00</td>
+                <td>$0.00</td>
+            </tr>
+            <tr>
+                <th scope="row">Mortgage</th>
+                <td>$0.00</td>
+                <td>$0.00</td>
+                <td>$0.00</td>
+            </tr>
+            <tr>
+                <th scope="row">IRA</th>
+                <td>$0.00</td>
+                <td>$0.00</td>
+                <td>$0.00</td>
+            </tr>
+            <tr class="thead-light">
+                <th scope="rowgroup">Personal</th>
+                <th>$0.00</td>
+                <th>$0.00</td>
+                <th>$0.00</td>
+            </tr>
+            <tr>
+                <th scope="row">Household Goods</th>
+                <td>$0.00</td>
+                <td>$0.00</td>
+                <td>$0.00</td>
+            </tr>
+            <tr>
+                <th scope="row">Clothes</th>
+                <td>$0.00</td>
+                <td>$0.00</td>
+                <td>$0.00</td>
+            </tr>
+        </tbody>
+    </table>
 {% endblock %}
