Update padding on dashboard content
Removing padding on container fluid object was source of issues with
scroll and alignment. Simply remove the left-right padding from the main
element instead.

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid px-0">
+    <div class="container-fluid">
         <div class="row">
 
             <!-- Sidebar -->
@@ -84,7 +84,7 @@
             </nav>
 
             <!-- Dashboard Content -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-2">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-0">
                 {% include '_messages.html' %}
 
                 {% block dashboard_content %} {% endblock %}
