--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -18,7 +18,7 @@
         <div class="row">
 
             <!-- Sidebar -->
-            <nav class="col-md-2 d-none d-lg-block bg-light sidebar">
+            <nav class="col-lg-2 d-none d-lg-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <div class="dropdown">
                         <button class="btn btn-block rounded-0 dropdown-toggle d-flex justify-content-between align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -84,7 +84,7 @@
             </nav>
 
             <!-- Dashboard Content -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-0">
+            <main role="main" class="col-lg-10 ml-sm-auto px-0">
                 {% include '_messages.html' %}
 
                 {% block dashboard_content %} {% endblock %}
