--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -12,8 +12,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="thead-light" data-toggle="collapse" data-target=".budget-category-savings">
-                <th>Savings</th>
+            <tr class="thead-light">
+                <th> 
+                    <span data-target=".budget-category-savings" data-toggle="collapse" aria-expanded="true">
+                        <span data-feather="chevron-down"></span>
+                    </span>
+                    Savings
+                </th>
                 <th>$0.00</td>
                 <th>$0.00</td>
                 <th>$0.00</td>
