Replace BS event handlers with improved expander js
Check if target of event isn't "this" in order to modify that icon and call
click on "this" in order to trigger BS collapse.

--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -14,7 +14,7 @@
         <tbody>
             <tr class="thead-light">
                 <th> 
-                    <span data-target=".budget-category-savings" data-toggle="collapse" aria-expanded="true">
+                    <span class="expander" data-target=".budget-category-savings" data-toggle="collapse" aria-expanded="true">
                         <span data-feather="chevron-down"></span>
                     </span>
                     Savings
