Add quick css to table icons

--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -43,8 +43,13 @@
             </tr>
         </tbody>
         <tbody>
-            <tr class="thead-light" data-toggle="collapse" data-target=".budget-category-personal"> 
-                <th>Personal</th>
+            <tr class="thead-light"> 
+                <th>
+                    <span class="expander" data-target=".budget-category-personal" data-toggle="collapse" aria-expanded="true">
+                        <span data-feather="chevron-down"></span>
+                    </span>
+                    Personal
+                </th>
                 <th>$0.00</td>
                 <th>$0.00</td>
                 <th>$0.00</td>
