--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -7,6 +7,14 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/floating_labels.css') }}">
+
+    <style>
+        .table .feather {
+            width: 20px;
+            height: 20px;
+            vertical-align: text-bottom;
+        }
+    </style>
 {% endblock %}
 
 {% block navbar %}
