--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -14,6 +14,21 @@
             height: 20px;
             vertical-align: text-bottom;
         }
+
+        .budget-toolbar {
+            font-size: .9rem;
+        }
+
+        .budget-toolbar .feather {
+            width: 16px;
+            height: 16px;
+            vertical-align: middle;
+        }
+
+        .budget-toolbar span:hover {
+            color: #212529;
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 
