--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -2,6 +2,12 @@
 {% set active_page = 'dashboard.budget' -%}
 
 {% block dashboard_content %}
+    <div class="budget-toolbar text-muted p-1">
+        <span>
+            <span data-feather="plus-circle"></span>
+            Category Group
+        </span>
+    </div>
     <table class="table table-sm">
         <thead>
             <tr>
