Modify modal form to work via AJAX request
Added label input to form_group macro to allow for certain form
fields to not display floating label (such as select field).

Updated to jquery min from jquery slim.min in order to use AJAX.

Separate out add_account_form.html so that AJAX can replace form html with error messages from Flask-WTF.

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,5 +1,6 @@
 {% macro form_group(field) -%}
     {% set class_ = kwargs.pop('class_', '') %}
+    {% set label = kwargs.pop('label', True) %}
     {% set placeholder = '' %}
     <div class="form-label-group">
         {% if field.errors %}
@@ -9,7 +10,7 @@
         {% endif %}
 
         {{ field(class_=class_, placeholder=field.label.text) }}
-        {{ field.label }}
+        {% if label %} {{ field.label }} {% endif %}
 
         {% if field.errors %}
             <div class="invalid-feedback">
