--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -168,4 +168,16 @@
     });
     </script>
 
+    <!-- Initialize popovers -->
+    <script>
+        $(function () {
+            $('[data-toggle="popover"]').popover({
+                html: true,
+                sanitize: false,
+                content: function() {
+                    return $(this).find('.popover-content').html();
+                }
+            })
+        })
+    </script>
 {% endblock %}
