--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -3,18 +3,10 @@
 
 {% block dashboard_content %}
     <div class="budget-toolbar text-muted p-1">
-        <span data-container="body" data-toggle="popover" data-placement="bottom">
+        <span data-toggle="modal" data-target="#addCategoryGroupModal">
             <span data-feather="plus-circle"></span>
             Category Group
-            <div class="d-none popover-content">
-                <form class="form-floating" method="post" action="{{ url_for('dashboard.add_account') }}" novalidate>
-                    {{ category_group_form.hidden_tag() }}
-                    {{ form_group(category_group_form.category_group) }}
-                    {{ category_group_form.submit(class_="btn btn-primary") }}
-                </form>
-            </div>
         </span>
-        
     </div>
     <table class="table table-sm">
         <thead>
@@ -82,4 +74,13 @@
             </tr>
         </tbody>
     </table>
+
+    <!-- 'Add Category Group' modal  -->
+    <div class="modal fade" id="addCategoryGroupModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                {% include 'dashboard/add_category_group_form.html' %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
