--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -52,6 +52,7 @@
                 </tbody>
             {% endfor %}
         {% endif %}
+    </table>
 
     <!-- 'Add Category Group' modal  -->
     <div class="modal fade" id="addCategoryGroupModal" tabindex="-1" role="dialog" aria-hidden="true">
