Fix bug with multiple add category forms
After first form, all additional forms accepted no input. Pivot to using one form
and using javascript to modify which route the form is posting to depending on
which category group triggered the add category.

--- a/app/templates/dashboard/add_category_form.html
+++ b/app/templates/dashboard/add_category_form.html
@@ -1,6 +1,7 @@
 {% from '_formhelpers.html' import form_group %}
+{% set action = url_for('dashboard.add_category', category_group_name=category_group.name) if category_group else url_for('dashboard.budget') %}
 
-<form class="form-floating" method="post" action="{{ url_for('dashboard.add_category', category_group_name=category_group.name) }}" novalidate>
+<form class="form-floating" method="post" action="{{ action }}" novalidate>
     {{ add_category_form.hidden_tag() }}
     <div class="modal-body">
         {{ form_group(add_category_form.category) }}
