--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -25,17 +25,9 @@
                             <span class="expander" data-target=".budget-category-{{ category_group.id }}" data-toggle="collapse" aria-expanded="true">
                                 <span data-feather="chevron-down"></span>
                             </span>
-                            <span data-toggle="modal" data-target="#addCategoryModal{{ category_group.id }}">
+                            <span data-toggle="modal" data-target="#addCategoryModal">
                                 {{ category_group.name }}
                             </span>
-                            <!-- 'Add Category' modal  -->
-                            <div class="modal fade" id="addCategoryModal{{ category_group.id }}" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        {% include 'dashboard/add_category_form.html' %}
-                                    </div>
-                                </div>
-                            </div>
                         </th>
                         <th>$0.00</td>
                         <th>$0.00</td>
@@ -62,4 +54,32 @@
             </div>
         </div>
     </div>
+
+    <!-- 'Add Category' modal  -->
+    <div class="modal fade" id="addCategoryModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                {% include 'dashboard/add_category_form.html' %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block scripts %}
+
+    {{ super() }}
+
+    <script>
+        var form_default_url;
+
+        $('#addCategoryModal').on('shown.bs.modal', function (event) {
+            var category_group = $(event.relatedTarget).text().trim();
+            form_default_url = $(event.target).find('form:first').attr('action');
+            $(event.target).find('form:first').attr('action', $(event.target).find('form:first').attr('action') + '/' + category_group + '/add_category');
+        })
+
+        $('#addCategoryModal').on('hidden.bs.modal', function (event) {
+            $(event.target).find('form:first').attr('action', form_default_url);
+        })
+    </script>
 {% endblock %}
