Add plus icons when hovering over category groups to indicate add category modal

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -29,6 +29,22 @@
             color: #212529;
             cursor: pointer;
         }
+
+        span[data-target="#addCategoryModal"] {
+            cursor: pointer;
+        }
+
+        span[data-target="#addCategoryModal"] .feather {
+            display: none;
+        }
+
+        span[data-target="#addCategoryModal"]:hover .feather {
+            display: inline;
+        }
+
+        span[data-target="#addCategoryModal"]:hover .feather:hover {
+            color: #212529;
+        }
     </style>
 {% endblock %}
 
