--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -27,6 +27,7 @@
                             </span>
                             <span data-toggle="modal" data-target="#addCategoryModal">
                                 {{ category_group.name }}
+                                <span data-feather="plus-circle"></span>
                             </span>
                         </th>
                         <th>$0.00</td>
