Modify so that only plus icon next to category group launches add category modal

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -30,19 +30,19 @@
             cursor: pointer;
         }
 
-        span[data-target="#addCategoryModal"] {
+        span[data-target="#editCategoryGroupModal"] {
             cursor: pointer;
         }
 
-        span[data-target="#addCategoryModal"] .feather {
+        span[data-target="#editCategoryGroupModal"] .feather {
             display: none;
         }
 
-        span[data-target="#addCategoryModal"]:hover .feather {
+        span[data-target="#editCategoryGroupModal"]:hover .feather {
             display: inline;
         }
 
-        span[data-target="#addCategoryModal"]:hover .feather:hover {
+        span[data-target="#editCategoryGroupModal"]:hover .feather:hover {
             color: #212529;
         }
     </style>
