--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -25,9 +25,9 @@
                             <span class="expander" data-target=".budget-category-{{ category_group.id }}" data-toggle="collapse" aria-expanded="true">
                                 <span data-feather="chevron-down"></span>
                             </span>
-                            <span data-toggle="modal" data-target="#addCategoryModal">
+                            <span data-toggle="modal" data-target="#editCategoryGroupModal">
                                 {{ category_group.name }}
-                                <span data-feather="plus-circle"></span>
+                                <span data-toggle="modal" data-target="#addCategoryModal" data-feather="plus-circle"></span>
                             </span>
                         </th>
                         <th>$0.00</td>
